deploy-laravel-app/laravel.yml
---
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: laravel
  namespace: laravel
  labels:
    app: laravel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - name: laravel
          image: janortop5/laravel-app:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
            requests:
              memory: "64Mi"
              cpu: "0.1"

        - name: adapter
          image: nginx/nginx-prometheus-exporter:0.8.0
          args: ["-nginx.scrape-uri", "http://localhost/metrics"]
          ports:
            - containerPort: 9113
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
            requests:
              memory: "64Mi"
              cpu: "0.1"

---
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: laravel
  labels:
    app: laravel
spec:
  selector:
    app: laravel
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP

---
apiVersion: v1 
kind: Service 
metadata:
  name: nginx-exporter-service
  namespace: laravel
  labels: 
    app: nginx-metrics
spec:
  selector:
    app: laravel
  type: ClusterIP
  ports:
    - name: metrics
      protocol: TCP
      port: 8080
      targetPort: 9113
