deploy-laravel-app/mysql.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: mysql
  namespace: default
  labels:
    app: mysql 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql
          ports:
            - containerPort: 3306
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
            requests:
              memory: "64Mi"
              cpu: "0.1"

---
apiVersion: v1
kind: Service 
metadata:
  name: db
  namespace: default
  labels:
    app: db
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
